--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,12 +6,13 @@
     "js": "options.js"
   },
   "description": "Provide routes to send live captions to analytics servers.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "icons": {
     "128": "icons/icon.png"
   },
   "content_scripts": [{
-    "matches": ["https://meet.google.com/*"],
+    "matches": ["https://meet.google.com/*",
+                "https://*.zoom.us/wc/*"],
     "js": ["inject.js"],
     "css": ["css/style.css"],
     "run_at": "document_idle",
@@ -21,7 +22,8 @@
     "storage"
   ],
   "host_permissions": [
-    "http://meet.google.com/"
+    "http://meet.google.com/",
+    "https://*.zoom.us/"
   ],
   "web_accessible_resources": [
     {
@@ -30,7 +32,8 @@
         "options.html",
         "icons/icon_config.png","icons/icon_delete.png","icons/icon_circle.png","icons/icon_record.png","icons/icon_log.png",
         "css/style.css"],
-      "matches": [ "https://meet.google.com/*" ]
+      "matches": [ "https://meet.google.com/*",
+      "https://*.zoom.us/*"]
     }
   ],
   "manifest_version": 3,
