--- a/lca_config.ini
+++ b/lca_config.ini
@@ -1,4 +1,9 @@
 [connection.config.dictionary]
 merriam_api=yourkey
+[http_config]
+fullaccess=false
+[oauth]
+CLIENT_SECRETS_FILE="your client secrets file path"
+secret_key="your secret key"
 
 #place this file in the parent folder
